--- a/.babelrc
+++ b/.babelrc
@@ -8,9 +8,9 @@
     ],
     [
       "@babel/preset-react"
-    ],
-    {
-      "plugins": ["react-hot-loader/babel"]
-    }
+    ]
+  ],
+  "plugins": [
+    "react-hot-loader/babel"
   ]
 }
